Creating Table View Cell

--- a/MVPCatalogueApp/Views/ViewControllers/CatalogueElementsViewController.xib
+++ b/MVPCatalogueApp/Views/ViewControllers/CatalogueElementsViewController.xib
@@ -19,14 +19,19 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="0kq-9y-EIa">
-                    <rect key="frame" x="20" y="44" width="374" height="818"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="0kq-9y-EIa">
+                    <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                 </tableView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="ut4-M2-LMr"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="0kq-9y-EIa" firstAttribute="leading" secondItem="ut4-M2-LMr" secondAttribute="leading" id="HuM-c4-xC4"/>
+                <constraint firstItem="0kq-9y-EIa" firstAttribute="bottom" secondItem="ut4-M2-LMr" secondAttribute="bottom" id="QQp-Xf-PQ1"/>
+                <constraint firstItem="0kq-9y-EIa" firstAttribute="trailing" secondItem="ut4-M2-LMr" secondAttribute="trailing" id="g27-vL-nxV"/>
+                <constraint firstItem="0kq-9y-EIa" firstAttribute="top" secondItem="ut4-M2-LMr" secondAttribute="top" id="v6P-HL-89w"/>
+            </constraints>
             <point key="canvasLocation" x="-1178.2608695652175" y="-95.089285714285708"/>
         </view>
     </objects>
