--- a/MVPCatalogueApp/Views/ViewCells/CatalogueElementsViewCell.xib
+++ b/MVPCatalogueApp/Views/ViewCells/CatalogueElementsViewCell.xib
@@ -10,33 +10,33 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CatalogueElementsViewCellId" id="KGk-i7-Jjw" customClass="CatalogueElementsViewCell" customModule="MVPCatalogueApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="445" height="150"/>
+            <rect key="frame" x="0.0" y="0.0" width="445" height="140"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="445" height="150"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+                <rect key="frame" x="0.0" y="0.0" width="445" height="140"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rtt-GB-BwQ">
-                        <rect key="frame" x="5" y="5" width="128" height="128"/>
+                        <rect key="frame" x="10" y="5" width="128" height="128"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="128" id="ODd-Fm-EJQ"/>
-                            <constraint firstAttribute="height" constant="128" id="rhq-X8-P08"/>
+                            <constraint firstAttribute="height" constant="128" id="la2-wa-U25"/>
+                            <constraint firstAttribute="width" constant="128" id="rh0-Zb-qhJ"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qg3-4i-NJX">
-                        <rect key="frame" x="143" y="59" width="292" height="20.5"/>
+                        <rect key="frame" x="148" y="60" width="287" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="rtt-GB-BwQ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="OTN-Lp-Qg8"/>
-                    <constraint firstAttribute="bottom" secondItem="rtt-GB-BwQ" secondAttribute="bottom" constant="5" id="XUC-2b-20y"/>
-                    <constraint firstItem="Qg3-4i-NJX" firstAttribute="centerY" secondItem="rtt-GB-BwQ" secondAttribute="centerY" id="Z8w-7u-hdt"/>
-                    <constraint firstItem="rtt-GB-BwQ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="dcE-jM-K7r"/>
-                    <constraint firstAttribute="trailing" secondItem="Qg3-4i-NJX" secondAttribute="trailing" constant="10" id="mXM-d2-oQJ"/>
-                    <constraint firstItem="Qg3-4i-NJX" firstAttribute="leading" secondItem="rtt-GB-BwQ" secondAttribute="trailing" constant="10" id="qrd-86-74P"/>
+                    <constraint firstItem="rtt-GB-BwQ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="Bd4-Fo-jI3"/>
+                    <constraint firstItem="rtt-GB-BwQ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="Brq-ah-UzE"/>
+                    <constraint firstItem="Qg3-4i-NJX" firstAttribute="leading" secondItem="rtt-GB-BwQ" secondAttribute="trailing" constant="10" id="Cpa-HK-biW"/>
+                    <constraint firstItem="Qg3-4i-NJX" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="M4o-U9-ALz"/>
+                    <constraint firstAttribute="trailing" secondItem="Qg3-4i-NJX" secondAttribute="trailing" constant="10" id="PcX-79-uYY"/>
+                    <constraint firstAttribute="bottom" secondItem="rtt-GB-BwQ" secondAttribute="bottom" priority="999" constant="5" id="jlq-pf-vbY"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -44,7 +44,7 @@
                 <outlet property="catalogueImageView" destination="rtt-GB-BwQ" id="je3-FF-SJu"/>
                 <outlet property="catalogueTitleLabel" destination="Qg3-4i-NJX" id="RMj-ZT-C2z"/>
             </connections>
-            <point key="canvasLocation" x="-106.5217391304348" y="132.58928571428572"/>
+            <point key="canvasLocation" x="-106.5217391304348" y="129.24107142857142"/>
         </tableViewCell>
     </objects>
 </document>
