--- a/MVPCatalogueApp/ViewPresenters/ViewControllers/CatalogueElementsList/CatalogueElementsViewController.xib
+++ b/MVPCatalogueApp/ViewPresenters/ViewControllers/CatalogueElementsList/CatalogueElementsViewController.xib
@@ -11,6 +11,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CatalogueElementsViewController" customModule="MVPCatalogueApp" customModuleProvider="target">
             <connections>
                 <outlet property="catalogueTableView" destination="807-VE-l2W" id="xYC-kt-idC"/>
+                <outlet property="loader" destination="Jqh-Cl-57F" id="RoC-oC-kO1"/>
                 <outlet property="view" destination="M44-Ee-dS6" id="teM-3H-oMJ"/>
             </connections>
         </placeholder>
@@ -19,6 +20,14 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
+                <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="Jqh-Cl-57F">
+                    <rect key="frame" x="157" y="398" width="100" height="100"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="100" id="Mqq-s3-UAJ"/>
+                        <constraint firstAttribute="height" constant="100" id="OnS-Qj-khV"/>
+                    </constraints>
+                    <color key="color" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                </activityIndicatorView>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="807-VE-l2W">
                     <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -28,6 +37,8 @@
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
                 <constraint firstItem="807-VE-l2W" firstAttribute="trailing" secondItem="ut4-M2-LMr" secondAttribute="trailing" id="15Y-o7-N6r"/>
+                <constraint firstItem="Jqh-Cl-57F" firstAttribute="centerY" secondItem="M44-Ee-dS6" secondAttribute="centerY" id="8D2-Pb-u6K"/>
+                <constraint firstItem="Jqh-Cl-57F" firstAttribute="centerX" secondItem="M44-Ee-dS6" secondAttribute="centerX" id="CLd-68-guM"/>
                 <constraint firstItem="807-VE-l2W" firstAttribute="top" secondItem="ut4-M2-LMr" secondAttribute="top" id="E8Z-sl-0je"/>
                 <constraint firstItem="807-VE-l2W" firstAttribute="bottom" secondItem="ut4-M2-LMr" secondAttribute="bottom" id="PZ0-X9-iXm"/>
                 <constraint firstItem="807-VE-l2W" firstAttribute="leading" secondItem="ut4-M2-LMr" secondAttribute="leading" id="WXa-lq-QxH"/>
